Add vue (development version)

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <link href="/src/css/master.css" rel="stylesheet">
 
+    <!-- libs -->
+    <script src="/lib/vue-dev.js"></script>
 
 		<title>MindyBox</title>
 	</head>
