--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
 									<li>Agile/git/RESTful frameworks</li>
 								</ul>
 							</p>
+
+							<p>
+								Key tools
+								<ul>
+									<li>Git, Gitlab</li>
+									<li>Illustrator, Photoshop, Animate</li>
+								</ul>
+							</p>
 							 
 	
 							
