--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 
 			<div class="block" id="projects">
 				<div class="content">
-					<h1>Notable projects</h1>
+					<h1>My Journey</h1>
 					<p>
-						List of projects mixed personal and professional
+						Told by projects
 					</p>
 					<transition-group name="shift-card"
 									  class="cardlist flex_row wrap" 
@@ -150,6 +150,7 @@
 
 			ol 
 				li Programming judge: at FLL and VEX Robotics Competition
+				li Professional training TA 
 				li Udacity: Currently teaching myself Machine Learning and Deep Neural Networks. 
 				li Global Game Jam 2017. Our team won an award! Unity 
 				li I make crazy cards : Die cutter, perf boards, soldering iron
