Make filler card shrink when it finishes entering to stop jerking movement

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
 					</p>
 					<transition-group name="shift-card"
 									  class="cardlist flex_row wrap" 
-						 			  id="projects1">
+						 			  id="projects1"
+						 			  v-on:after-enter="afterEnter">
 							<project-card v-for="(proj, ind) in projectData.projects"
 										  v-bind:proj="proj"
 										  v-bind:index="ind"
