--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								I was taught to be a mechanical engineer, self-taught to be a software developer, and keep my mind open to be an artist.
 							</p>
 							<p>
-								6+ year of work experience as a full stack web developer in companies and organization that focus on education and robotics. I am now dipping my toe in DevOps and Deep Learning. I've adopted agile development into my practice and is motivated by success of the product. It is important for me to stay humble, and constantly read and learn.  
+								I became a full stack web developer in companies and organization that focus on education and robotics. I am now dipping my toe in DevOps and Deep Learning. I've adopted agile development into my practice and is motivated by success of the product. It is important for me to stay humble, and constantly read and learn.  
 							</p>
 							<p>
 								I am currently seeking new opportunities in the east coast, and hope to grow as a software developer. 
