Hack-ish bugfix for v-transition not happening if first card you ever click on is the first element

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<div class="content">
 					<h1>Hello, I am Mindy!</h1>
 					<h1>I am a Software/Web Developer in East Coast.</h1>
-					<h1>Got a minute?</h1>
+					<h1>This is my story:</h1>
 				</div>
 
 				
@@ -83,8 +83,7 @@
 				<div class="content">
 					<h1>My Journey</h1>
 					<p>
-						As told by projects. (Oldest to Newest)
-						Switch (Newest to Oldest)
+						As told by projects. (Newest to oldest)
 					</p>
 					<p>
 						I do not have a traditional computer science degree. This is the journey I took.
