--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="block" id="intro">
 				<div class="content">
 					<h1>Hello, I am Mindy!</h1>
-					<h1>I am a Software/Web Developer in East Coast.</h1>
+					<h1>I am a Software + Web Developer with a focus on Robotics and Education.</h1>
 					<h1>This is my story:</h1>
 				</div>
 
@@ -45,7 +45,7 @@
 								I became a full stack web developer in companies and organization that focus on education and robotics. I am now dipping my toe in DevOps and Deep Learning. I've adopted agile development into my practice and is motivated by success of the product. It is important for me to stay humble, and constantly read and learn.  
 							</p>
 							<p>
-								I am currently seeking new opportunities in the east coast, and hope to grow as a software developer. 
+								I am currently seeking new opportunities in the east coast, and can't wait for new things I will learn and fun new projects I will dig into! 
 							</p>
 
 						</div>
