--- a/index.html
+++ b/index.html
@@ -81,12 +81,9 @@
 
 			<div class="block" id="projects">
 				<div class="content">
-					<h1>My Journey</h1>
+					<h1>My Project Journey</h1>
 					<p>
-						As told by projects. (Newest to oldest)
-					</p>
-					<p>
-						I do not have a traditional computer science degree. This is the journey I took.
+						This is the path I took to get where I am today. (Newest to Oldest)
 					</p>
 					<transition-group name="shift-card"
 									  class="cardlist flex_row wrap" 
@@ -112,7 +109,7 @@
 					<h1>My Side Tracks</h1>
 
 					<p>
-						Smaller projects
+						Smaller projects that are ongoing that I am excited for. 
 					</p>
 
 					div.project-item
