--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
     <!-- styles -->
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-    <link href="src/css/master.css" rel="stylesheet">
+	<link href="src/css/master.css" rel="stylesheet">
+	
 
     <!-- libs -->
     <script src="lib/vue-dev.js"></script>
@@ -78,10 +79,23 @@
 				</div>
 			</div>
 
+			<div class="block" id="workexp">
+				<div class="content">
+					<h1>Work Experience</h1>
+					<p>
+						List of work experience
+					</p>
 
+					<timeline-cards v-for="(work, ind) in workExperienceData.data"
+										  v-bind:workobj="work"
+										  v-bind:index="ind"
+										  v-bind:key="work.title"/>
+				</div>
+
+			</div>
 			<div class="block" id="projects">
 				<div class="content">
-					<h1>My Project Journey</h1>
+					<h1>Notable Projects</h1>
 					<p>
 						This is the path I took to get where I am today. (Newest to Oldest)
 					</p>
@@ -201,8 +215,9 @@
 
 		
 		<script type="text/javascript" src="/src/json/projects.js"></script>
-		<script src="/src/scripts/main.js"></script>
-
+		<script type="text/javascript" src="/src/json/data_works.js"></script>
+		<script type="text/javascript" src="/src/scripts/main.js"></script>
+		<script type="text/javascript" src="/src/scripts/workExp.v.js"></script>
 
 
 	</body>
