--- a/index.html
+++ b/index.html
@@ -79,13 +79,12 @@
 				</div>
 			</div>
 
-			<div class="block" id="workexp">
+			<div class="block flex_column" id="workexp">
 				<div class="content">
 					<h1>Work Experience</h1>
-					<p>
-						List of work experience
-					</p>
-
+				</div>
+				<div class="content flood">
+				
 					<timeline-cards v-for="(work, ind) in workExperienceData.data"
 										  v-bind:workobj="work"
 										  v-bind:index="ind"
