--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class="block" id="intro">
 				<div class="content">
 					<h1>Hello, I am Mindy!</h1>
-					<h1>I am a Software Developer who've dedicated herself to Robotics and Education.</h1>
+					<h1>I am a self-taught Software Developer who've dedicated herself to Robotics and Education.</h1>
 					<h1>This is my story:</h1>
 				</div>
 
