Use webpack to modularize components

--- a/index.html
+++ b/index.html
@@ -213,12 +213,13 @@
 		</div> <!-- end: portfolio -->
 
 
-		
-		<script type="text/javascript" src="/src/json/data_projects.js"></script>
+		<script src="dist/main.js" type="text/javascript"></script>
+
+		<!-- <script type="text/javascript" src="/src/json/data_projects.js"></script>
 		<script type="text/javascript" src="/src/json/data_works.js"></script>
 
 		<script type="text/javascript" src="/src/scripts/proj.v.js"></script>
-		<script type="text/javascript" src="/src/scripts/workExp.v.js"></script>
+		<script type="text/javascript" src="/src/scripts/workExp.v.js"></script> -->
 
 
 	</body>
