--- a/index.html
+++ b/index.html
@@ -212,6 +212,9 @@
 
 		</div> <!-- end: portfolio -->
 
+		<!-- modal -->
+		<light-box/>
+		
 
 		<script src="dist/main.js" type="text/javascript"></script>
 
