# This is a combination of 3 commits. # This is the 1st commit message:
Make scrollable modal with lorem ipsum content

# This is the commit message #2:

Make scrollable modal with lorem ipsum content

# This is the commit message #3:

Make scrollable modal with lorem ipsum content

--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
 		</div> <!-- end: portfolio -->
 
 		<!-- modal -->
-		<light-box/>
-		
+		<div id="modal_wrapper"></div>
 
+	
 		<script src="dist/main.js" type="text/javascript"></script>
 
 		<!-- <script type="text/javascript" src="/src/json/data_projects.js"></script>
