--- a/index.html
+++ b/index.html
@@ -89,10 +89,12 @@
 				</div>
 				<div class="content flood">
 				
-					<work-cards v-for="(work, ind) in workExperienceData.data"
-										  v-bind:workobj="work"
-										  v-bind:index="ind"
-										  v-bind:key="work.title"/>
+					<work-cards 
+						v-for="(work, ind) in workExperienceData.data"
+						v-bind:rootState="rootState"
+						v-bind:workobj="work"
+						v-bind:index="ind"
+						v-bind:key="work.title"/>
 				</div>
 			</div>
 
@@ -215,7 +217,8 @@
 		<!-- modal -->
 		<div id="modal_wrapper"></div>
 
-	
+		
+		<script src="src/components/Store.js" type="text/javascript"></script>
 		<script src="dist/main.js" type="text/javascript"></script>
 
 		<!-- <script type="text/javascript" src="/src/json/data_projects.js"></script>
