--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				<div class="content">
 					<h1>Notable Projects</h1>
 					<p>
-						This is the path I took to get where I am today. (Newest to Oldest)
+						This is the journey I took. (Newest to Oldest)
 					</p>
 
 					<transition-group name="shift-card"
@@ -111,7 +111,8 @@
 						 			  v-on:after-enter="filler_afterEnter">
 							<project-card v-for="(proj, ind) in projectData.projects"
 										  v-bind:proj="proj"
-										  v-bind:index="ind"
+											v-bind:index="ind"
+											v-bind:depressnow="rootState.depressNow"
 										  v-bind:key="proj.title"/>
 					</transition-group>
 					<!-- end: cardlist -->
