Add blue color to the theme

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							</p>
 
 						</div>
-						<div class="box">
+						<div class="box skill_list">
 							<p>
 								Key skills
 								<ul>
