--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div class="block" id="intro">
 				<div class="content">
 					<h1>Hello, I am Mindy!</h1>
-					<h1>I am a self-taught Software Developer who've dedicated herself to Robotics and Education.</h1>
+					<h1>I am a design oriented Software Developer who've dedicated herself to Robotics and Education.</h1>
 					<h1>This is my story:</h1>
 				</div>
 			</div>
@@ -41,13 +41,20 @@
 					<div class="flex_row">
 						<div class="box" style="width:60%">
 							<p>
-								I was taught to be a mechanical engineer, self-taught to be a software developer, and keep my mind open to be an artist.
+								I am academically a mechanical engineer, grown professionally as a software developer, 
+								and an artist at heart.
 							</p>
 							<p>
-								I became a full stack web developer in companies and organization that focus on education and robotics. I am now dipping my toe in DevOps and Deep Learning. I've adopted agile development into my practice and is motivated by success of the product. It is important for me to stay humble, and constantly read and learn.  
+								Having two sides helped me thrive being a full stack web developer in organization 
+								that focus on education and robotics. Working closely with education also constantly reminds me to 
+								never stop learning, but also investigate what makes me learn better. 
+							</p>	
+								I am now dipping my toe in DevOps and Deep Learning. 
+								I've adopted agile development into my practice and is motivated by success of the team, and the product. 
 							</p>
 							<p>
-								I am currently seeking new opportunities in the east coast, and can't wait for new things I will learn and fun new projects I will dig into! 
+								I am currently seeking new opportunities in the east coast, 
+								and can't wait for new things I will learn from new projects and new people. 
 							</p>
 
 						</div>
