--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	
 				<div class="content">
 					<div class="flex_row">
-						<div class="box" style="width:60%">
+						<div class="box" style="width:70%">
 							<p>
 								I am academically a mechanical engineer, grown professionally as a software developer, 
 								and an artist at heart.
@@ -47,7 +47,7 @@
 							<p>
 								Having two sides helped me thrive being a full stack web developer in organization 
 								that focus on education and robotics. Working closely with education also constantly reminds me to 
-								never stop learning, but also investigate what makes me learn better. 
+								never stop learning, but also investigate what makes me learn better.
 							</p>	
 								I am now dipping my toe in DevOps and Deep Learning. 
 								I've adopted agile development into my practice and is motivated by success of the team, and the product. 
@@ -58,7 +58,7 @@
 							</p>
 
 						</div>
-						<div class="box skill_list">
+						<div class="box skill_list" style="width:30%">
 							<p>
 								Key skills
 								<ul>
