Color adjustments and layout adjustments

--- a/index.html
+++ b/index.html
@@ -23,11 +23,20 @@
 
 		<div class='portfolio_wrapper' id="main_body">
 
-			<div class="header">
-					Mindybox
+			<div class="header flex_row space_between">
+				<span class="logo">Mindy Jang</span>
+				<div class="group flex_row">
+					<span>About</span>
+					<span>Work</span>
+					<span>Projects</span>
+					<span>Ice Breakers</span>
+					<span>Contact</span>
+					<span>Resume</span>
 				</div>
 
-			<div class="block" id="intro">
+			</div>
+
+			<div class="flushed_block" id="intro">
 				<div class="content">
 					<h1>Hello, I am Mindy!</h1>
 					<h1>I am a design oriented Software Developer who've dedicated herself to Robotics and Education.</h1>
@@ -39,7 +48,7 @@
 	
 				<div class="content">
 					<div class="flex_row">
-						<div class="box" style="width:70%">
+						<div class="box me_description" style="width:70%">
 							<p>
 								I am academically a mechanical engineer, grown professionally as a software developer, 
 								and an artist at heart.
