Make header appear to "detach" when scroll moves

--- a/index.html
+++ b/index.html
@@ -23,18 +23,7 @@
 
 		<div class='portfolio_wrapper' id="main_body">
 
-			<div class="header flex_row space_between">
-				<span class="logo">Mindy Jang</span>
-				<div class="group flex_row">
-					<span>About</span>
-					<span>Work</span>
-					<span>Projects</span>
-					<span>Ice Breakers</span>
-					<span>Contact</span>
-					<span>Resume</span>
-				</div>
-
-			</div>
+			<Headermenu v-bind:rootstate="rootState"></Headermenu>
 
 			<div class="flushed_block" id="intro">
 				<div class="content">
