--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <!-- libs -->
 		<!-- <script src="lib/vue-dev.js"></script> -->
 		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-
+		<link 
+			rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" 
+			integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" 
+			crossorigin="anonymous"
+		>
 		<title>MindyBox</title>
 	</head>
 
