Add close button to project modal

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
 
 		
-			<div class="block flex_column">
+			<div class="block flex_column" id="contact">
 				<Titlebox title="Keep In Touch!"></Titlebox>
 				<div class="content">
 
@@ -193,10 +193,10 @@
 				</div>
 			</div>
 
-			<div class="block" id="footer">
-				<div class="content">
-					This is footer
-				</div>
+			<div class="block flex_row" id="footer">
+				<span>
+					Created by Mindy Jang | Powered by Vue.js
+				</span>
 			</div>
 
 
