Finish detail on a project

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 									<li>Python/Django</li>
 									<li>Ruby on Rails</li>
 									<li>Agile/git/RESTful frameworks</li>
+									<li>HTML, Sass</li>
 								</ul>
 							</p>
 
