Make indesicive text edits to descriptions

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 			<div class="flushed_block" id="intro">
 				<div class="content">
 					<h1>Hello, I am Mindy!</h1>
-					<h1>I am a design oriented Software Developer who've dedicated herself to Robotics and Education.</h1>
+					<h1>I am a Software Developer who helps putting robotics and education (and fun) together.
+					</h1>
 					<h1>This is my story:</h1>
 				</div>
 			</div>
@@ -64,20 +65,13 @@
 							<p>
 								Key skills
 								<ul>
-									<li>React, Vue</li>
-									<li>Javascript</li>
-									<li>Python/Django</li>
-									<li>Ruby on Rails</li>
-									<li>Agile/git/RESTful frameworks</li>
-									<li>HTML, Sass</li>
-								</ul>
-							</p>
-
-							<p>
-								Key tools
-								<ul>
-									<li>Git, Gitlab</li>
-									<li>Illustrator, Photoshop, Animate</li>
+									<li>Javascript (ES6), Typescript, Python, Shell script, C++</li>
+									<li>React.js, Vue.js</li>
+									<li>Django, Node.js, Ruby on Rails, RESTful framework</li>
+									<li>Agile, Scrum</li>
+									<li>AWS S3, EC2, Lambda, Heroku</li>
+									<li>ROS, Rviz, Gazebo, Jupyter</li>
+									<li>Graphics</li>
 								</ul>
 							</p>
 						</div>
