Finalize description on splash section

--- a/index.html
+++ b/index.html
@@ -31,10 +31,24 @@
 
 			<div class="flushed_block" id="intro">
 				<div class="content">
-					<h1>Hello, I am Mindy!</h1>
-					<h1>I am a Software Developer who helps putting robotics and education (and fun) together.
-					</h1>
-					<h1>This is my story:</h1>
+					<div class="big_title">
+						Hello, I am Mindy.
+					</div>
+
+					<h2>
+							I am a full-stack software developer.
+					</h2>
+					<h2>
+						Currently putting Robotics and Education (and fun) together.
+						I find passion in building creative tools and web applications, and solving problems around it.
+					</h2>
+					<div class="small_title">
+							And I am looking for my next challenges. >> Get in touch!
+							<br/>
+							<br/>
+							<br/>
+
+					</div>
 				</div>
 			</div>
 			
