Finalize description on 'about me' section

--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
 					</h2>
 					<h2>
 						Currently putting Robotics and Education (and fun) together.
-						I find passion in building creative tools and web applications, and solving problems around it.
+						I find passion in building and solving problems around creative tools 
+						and web applications.
 					</h2>
 					<div class="small_title">
-							And I am looking for my next challenges. >> Get in touch!
+							I am looking for my next challenges in the east coast. >> Get in touch!
 							<br/>
 							<br/>
 							<br/>
@@ -52,30 +53,31 @@
 				</div>
 			</div>
 			
-			<div class="block" id="aboutme">
-	
-				<div class="content">
-					<div class="flex_row">
-						<div class="box me_description" style="width:70%">
+			<div class="block flex_column" id="aboutme">
+					<Titlebox title="About me"></Titlebox>
+				<div class="content flex_row">
+						<div class="box me_description">
 							<p>
-								I am academically a mechanical engineer, grown professionally as a software developer, 
-								and an artist at heart.
+								<strong>Before I was a software developer</strong>, I was studying mechanical engineering at CMU. 
+								Before pursuing engineering, I was drawing comics and animating, which I still do. 
+							  My seemingly disconnected set of skills connected together, 
+								and helped me become a full-stack developer.  
 							</p>
 							<p>
-								Having two sides helped me thrive being a full stack web developer in organization 
-								that focus on education and robotics. Working closely with education also constantly reminds me to 
-								never stop learning, but also investigate what makes me learn better.
-							</p>	
-								I am now dipping my toe in DevOps and Deep Learning. 
-								I've adopted agile development into my practice and is motivated by success of the team, and the product. 
-							</p>
+								<strong>My 7+ years of professional jourey</strong> 
+								goes through organizations with focus on robotics and education.
+							  I frequently collaborated with mix of other creative and technical minds, 
+							  and I bridge the gap between designers on the front-end, and and engineers on the back-end.
+								</p>	
 							<p>
-								I am currently seeking new opportunities in the east coast, 
-								and can't wait for new things I will learn from new projects and new people. 
+								<strong>My passion keeps me motivated and excited</strong> for learning new things.  
+								I am currently studying Machine Learning on the side, and hope to project this into my career.
 							</p>
 
 						</div>
-						<div class="box skill_list" style="width:30%">
+				</div>
+				<div class="content">
+						<div class="box skill_list">
 							<p>
 								Key skills
 								<ul>
@@ -83,16 +85,16 @@
 									<li>React.js, Vue.js</li>
 									<li>Django, Node.js, Ruby on Rails, RESTful framework</li>
 									<li>Agile, Scrum</li>
-									<li>AWS S3, EC2, Lambda, Heroku</li>
+									<li>Heroku, Webpack</li>
+									<li>AWS S3, EC2, Lambda</li>
 									<li>ROS, Rviz, Gazebo, Jupyter</li>
-									<li>Graphics</li>
+									<li>Photoshop, Iillustrator, Animate</li>
 								</ul>
 							</p>
 						</div>
 
 					</div>
-					
-				</div>
+
 			</div>
 
 			<div class="block flex_column" id="workexp">
