--- a/index.html
+++ b/index.html
@@ -77,20 +77,22 @@
 						</div>
 				</div>
 				<div class="content">
-						<div class="box skill_list">
-							<p>
-								Key skills
-								<ul>
-									<li>Javascript (ES6), Typescript, Python, Shell script, C++</li>
-									<li>React.js, Vue.js</li>
-									<li>Django, Node.js, Ruby on Rails, RESTful framework</li>
-									<li>Agile, Scrum</li>
-									<li>Heroku, Webpack</li>
-									<li>AWS S3, EC2, Lambda</li>
-									<li>ROS, Rviz, Gazebo, Jupyter</li>
-									<li>Photoshop, Iillustrator, Animate</li>
-								</ul>
-							</p>
+						<div class="box" id="key_skills">
+							<div class="skill_title">
+								<span class="title_icon fas fa-star"></span>
+								Key skills overview
+							</div>
+
+							<ul class="skill_list flex_row">
+								<li>Javascript (ES6)<br/>Typescript<br/>Python<br/>Node.js<br/>C++</li>
+								<li>React.js<br/>Vue.js<br/>Sass<br/>Flux</li>
+								<li>Django<br/>Ruby on Rails<br/>RESTful frameworks</li>
+								<li>Shell script</br>Heroku<br/>Webpack<br/>Grunt</li>
+								<li>Agile<br/>Scrum</li>
+								<li>AWS S3<br/>EC2<br/>Lambda</li>
+								<li>ROS<br/>Rviz<br/>Gazebo<br/>Jupyter</li>
+								<li>Photoshop<br/>Iillustrator<br/>Animate</li>
+							</ul>
 						</div>
 
 					</div>
