--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							<p>
 								<strong>My 7+ years of professional journey</strong> 
 								goes through organizations with focus on robotics and education.
-							  I frequently collaborated with mix of other creative and technical minds, 
+								I frequently collaborate with mix of other creative and technical minds, 
 							  and I bridge the gap between designers on the front-end, and and engineers on the back-end.
 								</p>	
 							<p>
