Make splash more mobile friendly

--- a/index.html
+++ b/index.html
@@ -31,15 +31,22 @@
 
 			<div class="flushed_block" id="intro">
 				<div class="content">
-					<div class="big_title">
+					<a
+						href="#" 
+						class="big_title visible_normal">
 						Hello, I am Mindy.
-					</div>
+					</a>
+					<a 
+						href="#"	
+						class="big_title visible_mobile">
+						Hello, <br/>I am Mindy.
+					</a>
 
-					<h2>
-							I am a full-stack software developer.
+					<h2 class="stick">
+							A full-stack software developer.
 					</h2>
 					<h2>
-						Currently putting Robotics and Education (and fun) together.
+						I am Currently putting Robotics and Education (and fun) together.
 						I find passion in building and solving problems around creative tools 
 						and web applications.
 					</h2>
