Make small layout changes in header, and content sections

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							A full-stack software developer.
 					</h2>
 					<h2>
-						I am Currently putting Robotics and Education (and fun) together.
+						I am currently putting Robotics and Education (and fun) together.
 						I find passion in building and solving problems around creative tools 
 						and web applications.
 					</h2>
