Make splash section more responsible and add styled button class

--- a/index.html
+++ b/index.html
@@ -45,13 +45,27 @@
 					<h2 class="stick">
 							A full-stack software developer.
 					</h2>
-					<h2>
+					<h2 
+						id="career_summary"	
+						class="softer_color"
+					>
 						I am currently putting Robotics and Education (and fun) together.
 						I find passion in building and solving problems around creative tools 
 						and web applications.
 					</h2>
-					<div class="small_title">
-							I am looking for my next challenges in the east coast. >> Get in touch!
+					<div 
+						id="career_message"
+						class="small_title softer_color"
+					>
+							I am looking for my next challenges! 
+							<span class="visible_normal"> >> </span>
+							<div class="button_container">
+								<a href="#" class="btn_large">
+									<span class="icon far fa-envelope"></span> Get in touch!
+								</a>
+							</div>
+
+							<br/>
 							<br/>
 							<br/>
 							<br/>
