Add button on contact section

--- a/index.html
+++ b/index.html
@@ -172,10 +172,16 @@
 
 		
 			<div class="block flex_column" id="contact">
-				<Titlebox title="Keep In Touch!"></Titlebox>
+				<Titlebox title="Contact"></Titlebox>
 				<div class="content">
+					Thank you for taking your time to visit my website. 
+					I am currently looking for more opportunities and challenges in the east coast. 
+				</div>
 
-					Thank you for dropping by!
+				<div class="content flood" style="text-align: center;">
+					<a href="#" class="btn_large">
+						<span class="icon far fa-envelope"></span> Get in touch
+					</a>
 				</div>
 			</div>
 
