Add extra large button in the contact section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							I am looking for my next challenges! 
 							<span class="visible_normal"> >> </span>
 							<div class="button_container">
-								<a href="#" class="btn_large">
+								<a href="#" class="btn">
 									<span class="icon far fa-envelope"></span> Get in touch!
 								</a>
 							</div>
@@ -179,7 +179,7 @@
 				</div>
 
 				<div class="content flood" style="text-align: center;">
-					<a href="#" class="btn_large">
+					<a href="#" class="btn large">
 						<span class="icon far fa-envelope"></span> Get in touch
 					</a>
 				</div>
@@ -187,7 +187,7 @@
 
 			<div class="block flex_row" id="footer">
 				<span>
-					Created by Mindy Jang | Powered by Vue.js
+					Created by Mindy Jang<span style="margin:0 10px;">|</span>Powered by Vue.js
 				</span>
 			</div>
 
