Update splash background to be more responsive

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 								<a href="#" class="btn">
 									<span class="icon far fa-envelope"></span> Get in touch!
 								</a>
+								<a href="#" class="btn visible_mobile">
+									<span class="icon far fa-envelope"></span> Resume
+								</a>
 							</div>
 
 							<br/>
