Update content on activity and contact sections

--- a/index.html
+++ b/index.html
@@ -184,9 +184,12 @@
 		
 			<div class="block flex_column" id="contact">
 				<Titlebox title="Contact"></Titlebox>
-				<div class="content">
-					Thank you for taking your time to visit my website. 
-					I am currently looking for more opportunities and challenges in the east coast. 
+				<div class="content" style="text-align: center;">
+					Thank you for your time. Hope you have a wonderful day!
+					<br/>
+					In the mean time, I will be continuously looking for more opportunities and challenges in the east coast. 
+					<br/>
+
 				</div>
 
 				<div class="content flood" style="text-align: center;">
