--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					</a>
 
 					<h2 class="stick">
-							A full-stack software developer.
+							A full-stack web and software developer.
 					</h2>
 					<h2 
 						id="career_summary"	
