--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						class="softer_color"
 					>
 						I am currently putting Robotics and Education (and fun) together.
-						I find passion in building and solving problems around creative tools 
+						I find passion for building and solving problems around creative tools 
 						and web applications.
 					</h2>
 					<div 
@@ -90,19 +90,15 @@
 				<div class="content flex_row">
 						<div class="box me_description">
 							<p>
-								<strong>Before I was a software developer</strong>, I was studying mechanical engineering at CMU. 
-								Before pursuing engineering, I was drawing comics and animating, which I still do. 
-							  My seemingly disconnected set of skills connected together, 
-								and helped me become a full-stack developer.  
+								<strong>I am a creative-oriented software engineer who is also an aspiring comic artist.</strong>
+								At first, my set of skills were seemingly disconnected, but they came together to help me become a full-stack developer.
 							</p>
 							<p>
-								<strong>My 7+ years of professional journey</strong> 
-								goes through organizations with focus on robotics and education.
-								I frequently collaborate with mix of other creative and technical minds, 
-							  and I bridge the gap between designers on the front-end, and and engineers on the back-end.
+								<strong>My 7 years of professional journey</strong> goes through organizations that focused on robotics and education. 
+								I frequently collaborate with other creative, educators, and technical minds, and bridge the gap between front-end and back-end.
 								</p>	
 							<p>
-								<strong>My passion keeps me motivated and excited</strong> for learning new things.  
+								<strong>My passion keeps me motivated and excited</strong> to learn new things.  
 								I am currently studying Machine Learning on the side, and hope to project this into my career.
 							</p>
 
