--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" 
 			crossorigin="anonymous"
 		>
-		<title>MindyBox</title>
+		<title>Mindy Jang</title>
 	</head>
 
 	<body>
