Change the strange sentence

--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
 			<div class="block flex_column" id="contact">
 				<Titlebox title="Contact"></Titlebox>
 				<div class="content" style="text-align: center;">
-					Thank you for your time. Hope you have a wonderful day!
+					Thank you for your time.
 					<br/>
-					In the mean time, I will be continuously looking for more opportunities and challenges in the east coast. 
+					Keep in touch!
 					<br/>
 
 				</div>
